Added in Env Vars groovy script

--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -3,4 +3,5 @@ USER jenkins
 COPY plugins.txt /usr/share/jenkins/plugins.txt
 COPY 00_matrix.groovy /usr/share/jenkins/ref/init.groovy.d/00_matrix.groovy
 COPY 01_creds.groovy /usr/share/jenkins/ref/init.groovy.d/01_creds.groovy
+COPY 02_envvars.groovy /usr/share/jenkins/ref/init.groovy.d/02_envvars.groovy
 RUN /usr/local/bin/plugins.sh /usr/share/jenkins/plugins.txt
