--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,17 @@
 version: "2"
 
 services:
-   nexus:
-    image: sonatype/nexus
-    container_name: nexus
-    ports:
-      - "9250:8081"
-   gitlab:
-    image: gitlab/gitlab-ce
-    container_name: gitlab
-    hostname: gitlab-ce
-    volumes:
-      - /srv/gitlab/config:/etc/gitlab
-      - /srv/gitlab/logs:/var/log/gitlab
-      - /srv/gitlab/data:/var/opt/gitlab
-    ports:
-      - "4433:443"
-      - "8082:80"
-      - "2222:22"
    jenkins:
     build: jenkins/.
     volumes:
       - /var/jenkins_home
       - /tmp
-      - ./keys/ca.pem:/var/jenkins_home/.docker/ca.pem
-      - ./keys/cert.pem:/var/jenkins_home/.docker/cert.pem
-      - ./keys/key.pem:/var/jenkins_home/.docker/key.pem
+      - /var/jenkins_home/keys
     ports:
       - "8080:8080"
       - "50000:50000"
     container_name: jenkins
     environment:
-      DOCKER_TLS_VERIFY: 1
-      DOCKER_HOST: 127.0.0.1:2376
-      DOCKER_CERT_PATH: /var/jenkins_home/.docker
 #   example labels:
     labels:
       com.example.description: "Accounting webapp"
