--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -2,6 +2,8 @@ FROM jenkins:1.651.3
 USER root
 RUN apt-get update
 RUN apt-get install -y apt-transport-https ca-certificates
+RUN apt-get install -y java-1.7.0-openjdk*
+RUN apt-get install -y npm grunt
 RUN echo 'deb https://apt.dockerproject.org/repo debian-jessie main' > /etc/apt/sources.list.d/docker.list
 RUN apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D
 RUN apt-get update && apt-get install -y docker-engine
@@ -14,7 +16,7 @@ COPY plugins.txt /usr/share/jenkins/plugins.txt
 COPY 00_matrix.groovy /usr/share/jenkins/ref/init.groovy.d/00_matrix.groovy
 COPY 01_creds.groovy /usr/share/jenkins/ref/init.groovy.d/01_creds.groovy
 COPY 02_envvars.groovy /usr/share/jenkins/ref/init.groovy.d/02_envvars.groovy
-COPY 03_slave.groovy /usr/share/jenkins/ref/init.groovy.d/03_slave.groovy 
+COPY 03_slave.groovy /usr/share/jenkins/ref/init.groovy.d/03_slave.groovy
 
 
 RUN /usr/local/bin/plugins.sh /usr/share/jenkins/plugins.txt
