--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -2,11 +2,12 @@ FROM jenkins:1.651.3
 USER root
 RUN apt-get update
 RUN apt-get install -y apt-transport-https ca-certificates
-RUN apt-get install -y java-1.7.0-openjdk*
-RUN apt-get install -y npm grunt
 RUN echo 'deb https://apt.dockerproject.org/repo debian-jessie main' > /etc/apt/sources.list.d/docker.list
 RUN apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D
 RUN apt-get update && apt-get install -y docker-engine
+RUN apt-get install -y openjdk-7-jdk
+RUN apt-get install -y npm 
+RUN npm install -g grunt-cli
 RUN gpasswd -a jenkins docker
 RUN curl -L https://github.com/docker/compose/releases/download/1.8.0/run.sh > /usr/local/bin/docker-compose
 RUN chmod +x /usr/local/bin/docker-compose
